Archive2/0a/d4ea0f6e8c917f/output
main.cpp:3:12: warning: field 'x_' will be initialized after field 'y_' [-Wreorder]
    Foo(): x_(0), y_(x_) {}
           ^
main.cpp:16:5: error: use of undeclared identifier 'std'
    std::cout << f.y_ << std::endl;
    ^
main.cpp:16:26: error: use of undeclared identifier 'std'
    std::cout << f.y_ << std::endl;
                         ^
main.cpp:18:5: error: use of undeclared identifier 'std'
    std::cout << f.y_ << std::endl;
    ^
main.cpp:18:26: error: use of undeclared identifier 'std'
    std::cout << f.y_ << std::endl;
                         ^
1 warning and 4 errors generated.
